@@ -3,6 +3,7 @@
 	* Maildir on MMC (VFAT) (non-allowed characters on that FS type)
 	* Fixed a bug when removing folders (apriv->managed_folders needed to
 	get rid of the folder instance)
+	* Attachments purger for IMAP (bugfixes)
 
 2007-06-25  Philip Van Hoof  <pvanhoof@gnome.org>
 	
